fix: increase z-index for loading overlay

--- a/src/styles/loadingOverlay.scss
+++ b/src/styles/loadingOverlay.scss
@@ -22,7 +22,7 @@
 }
 
 #loaderOverlay {
-    z-index: 3;
+    z-index: 1000000;
 
     position: fixed;
     top: 0;
